# safefolder-data

./: .gitignore  Cargo.toml  LICENSE  README.md  i18n.toml  planet_context.yaml
base/workspace.db/: db
i18n/po/da/: achiever.po
i18n/po/no/: achiever.po
i18n/po/se/: achiever.po
src/: lib.rs  main.rs
src/commands/: mod.rs
src/commands/data_tables/: config.rs  schema.rs
src/commands/data_tables/examples/: create_table_example.yaml
src/commands/data_tables/schemas/: create_table.yaml  create_table_schema.yaml
src/commands/folder/: config.rs  data.rs  mod.rs  schema.rs
src/commands/folder/examples/: create_folder_customer.yaml  create_folder_customer_address.yaml  create_folder_example copy.yaml  create_folder_example.yaml  get_from_folder_example.yaml  insert_into_folder_address_01.yaml  insert_into_folder_example.yaml  select_from_folder_example.yaml
src/commands/table/: config.rs  constants.rs  data.rs  mod.rs  schema.rs
src/commands/table/examples/: create_table_example.yaml  get_from_table_example.yaml  insert_into_table_example.yaml  select_from_table_example.yaml
src/commands/table/schemas/: create_table.yaml
src/functions/: collections.rs  constants.rs  date.rs  mod.rs  number.rs  structure.rs  text.rs
src/planet/: constants.rs  mod.rs  validation.rs
src/planet/folders/: site.achiever  space.achiever
src/planet/folders/config/: site.achiever  space.achiever
src/planet/folders/data/: site.achiever  space.achiever
src/statements/: constants.rs  mod.rs
src/statements/folder/: config.rs  data.rs  mod.rs  schema.rs
src/statements/folder/examples/: create_folder_customer.yaml  create_folder_customer_address.yaml  create_folder_example.yaml  insert_into_folder_address_01.yaml  insert_into_folder_address_02.yaml  insert_into_folder_customer.yaml  insert_into_folder_example.yaml
src/storage/: config.rs  constants.rs  fields.rs  fields_old.rs  folder.rs  mod.rs  space.rs  table.rs
src/storage/columns/: date.rs  formula.rs  media.rs  mod.rs  number.rs  processing.rs  reference.rs  structure.rs  text.rs
src/storage/fields/: date.rs  formula.rs  mod.rs  number.rs  text.rs
src/storage/functions/: base.rs  constants.rs  mod.rs  text.rs
src/storage/properties/: date.rs  formula.rs  mod.rs  number.rs  reference.rs  text.rs
