[package]
name = "achiever"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
yaml-validator = {version = "0.1.0"}
sled = {version = "0.34.6", features = ["compression", "zstd"]}
yaml-validator-cli = {version="0.1.0"}
tantivy = {version="0.15.2"}
stop-words = {version="0.4.0"}
rust-stemmers = {version="1.2.0"}
dirs = {version="3.0.2"}
uuid = {version="0.8.2"}
argparse = {version="0.2.2"}
validator = { version = "0.14", features=["derive", "phone", "unic", "card"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = {version="0.8"}
i18n-embed = {version="0.10"}
xtr = {version="0.1.6"}
tr = {version="0.1.6"}
xid = {version="1.0.0"}
regex = {version="1"}
colored = {version="2.0.0"}
json = {version="0.12.4"}
bincode = {version="1.3.3"}
serde_json = {version = "1.0.64"}
